k8s/apps/authelia-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: apps
  labels:
    app.kubernetes.io/name: authelia-forwardauth
    app.kubernetes.io/part-of: homelab-apps
spec:
  forwardAuth:
    address: http://authelia-service.infra.svc.cluster.local:9091/api/verify?rd=https%3A%2F%2Fauth.homelab.local%2F
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
