k8s/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    app.kubernetes.io/part-of: homelab-apps
